--- a/ETL_Mini_Project_Starter_Code.ipynb
+++ b/ETL_Mini_Project_Starter_Code.ipynb
@@ -1928,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1989,14 +1989,14 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read the data into a Pandas DataFrame. Use the `header=2` parameter when reading in the data.\n",
-    "contact_info_df = pd.read_excel('Resources/contacts.xlsx', header=2)\n",
+    "contact_info_df = pd.read_excel('Resources/contacts.xlsx', header=3)\n",
     "contact_info_df.head()"
    ]
   },
@@ -2024,7 +2024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2040,6 +2040,11 @@
     "import json\n",
     "dict_values = []\n",
     "\n",
+    "for i, row in contact_info_df.iterrows():\n",
+    "    data = row[\"contact_info\"]\n",
+    "    jsonData = json.loads(data)\n",
+    "    row_values = [p for q, p in jsonData.items()]\n",
+    "    dict_values.append(row_values)\n",
     "\n",
     "# Print out the list of values for each row.\n",
     "print(dict_values)"
@@ -2047,7 +2052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2107,6 +2112,12 @@
        "      <td>Samuel Sorgatz</td>\n",
        "      <td>samuel.sorgatz@gmail.com</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5650</td>\n",
+       "      <td>Socorro Luna</td>\n",
+       "      <td>socorro.luna@hotmail.com</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -2117,22 +2128,27 @@
        "1        3765      Mariana Ellis       mariana.ellis@rossi.org\n",
        "2        4187        Sofie Woods       sofie.woods@riviere.com\n",
        "3        4941  Jeanette Iannotti   jeanette.iannotti@yahoo.com\n",
-       "4        2199     Samuel Sorgatz      samuel.sorgatz@gmail.com"
+       "4        2199     Samuel Sorgatz      samuel.sorgatz@gmail.com\n",
+       "5        5650       Socorro Luna      socorro.luna@hotmail.com"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a contact_info DataFrame and add each list of values, i.e., each row \n",
-    "# to the 'contact_id', 'name', 'email' columns.\n"
+    "# to the 'contact_id', 'name', 'email' columns.\n",
+    "\n",
+    "contact_info_df = pd.DataFrame(dict_values, columns = [\"contact_id\",'name','email'])\n",
+    "\n",
+    "contact_info_df.head(6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2153,12 +2169,13 @@
     }
    ],
    "source": [
-    "# Check the datatypes.\n"
+    "# Check the datatypes.\n",
+    "contact_info_df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2224,41 +2241,6 @@
        "      <td>Samuel</td>\n",
        "      <td>Sorgatz</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5650</td>\n",
-       "      <td>socorro.luna@hotmail.com</td>\n",
-       "      <td>Socorro</td>\n",
-       "      <td>Luna</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>5889</td>\n",
-       "      <td>carolina.murray@knight.com</td>\n",
-       "      <td>Carolina</td>\n",
-       "      <td>Murray</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>4842</td>\n",
-       "      <td>kayla.moon@yahoo.de</td>\n",
-       "      <td>Kayla</td>\n",
-       "      <td>Moon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>3280</td>\n",
-       "      <td>ariadna.geisel@rangel.com</td>\n",
-       "      <td>Ariadna</td>\n",
-       "      <td>Geisel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>5468</td>\n",
-       "      <td>danielle.ladeck@scalfaro.net</td>\n",
-       "      <td>Danielle</td>\n",
-       "      <td>Ladeck</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -2269,25 +2251,23 @@
        "1        3765       mariana.ellis@rossi.org    Mariana     Ellis\n",
        "2        4187       sofie.woods@riviere.com      Sofie     Woods\n",
        "3        4941   jeanette.iannotti@yahoo.com   Jeanette  Iannotti\n",
-       "4        2199      samuel.sorgatz@gmail.com     Samuel   Sorgatz\n",
-       "5        5650      socorro.luna@hotmail.com    Socorro      Luna\n",
-       "6        5889    carolina.murray@knight.com   Carolina    Murray\n",
-       "7        4842           kayla.moon@yahoo.de      Kayla      Moon\n",
-       "8        3280     ariadna.geisel@rangel.com    Ariadna    Geisel\n",
-       "9        5468  danielle.ladeck@scalfaro.net   Danielle    Ladeck"
+       "4        2199      samuel.sorgatz@gmail.com     Samuel   Sorgatz"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
-    "\n",
+    "# Create a \"first_name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
+    "contact_info_df[[\"first_name\",\"last_name\"]] = contact_info_df[\"name\"].str.split(' ' , expand=True)\n",
     "\n",
     "# Drop the contact_name column\n",
-    "\n"
+    "\n",
+    "contact_info_clean_df = contact_info_df.drop(columns = ['name'])\n",
+    "\n",
+    "contact_info_clean_df.head()"
    ]
   },
   {
